--- a/src/sass/_common.sass
+++ b/src/sass/_common.sass
@@ -34,3 +34,19 @@ body
 	line-height: 1.4
 	
 // common blocks
+.out
+	height: 100%
+
+.section
+	height: 100%
+	+g(red,#fff)
+
+.header
+	position: fixed
+	top: 0
+	left: 0
+	right: 0
+	height: 30px
+	font-size: 13px
+	background: #fff
+	z-index: 200
