--- a/src/sass/_block.sass
+++ b/src/sass/_block.sass
@@ -47,8 +47,15 @@
 // tittle
 .title
 	font-size: 40px
+	+gr
 
 .title-middle
 	font-size: 32px
 	letter-spacing: -1px 
 	text-transform: uppercase
+	+gb
+
+.title-small
+	font-size: 20px
+	text-transform: uppercase
+	+gb
