--- a/src/sass/_common.sass
+++ b/src/sass/_common.sass
@@ -49,7 +49,7 @@
 .in
 	margin: 0 auto
 	padding: 0 30px 0 40px
-	max-width: 915px
+	max-width: 915px 
 %in
 	@extend .in
 
@@ -69,8 +69,13 @@ body
 				text-align: left
 		.l-col1
 			width: 44%
+	&.is-what
+		.wrap
+			background-color: rgba($blue, .68)
+		.title-small
+			padding-left: 40px
 	
-// common blocks
+// common blocks 
 	
 // greeting
 .greeting
@@ -181,3 +186,22 @@ body
 			color: $white 
 		.nav a 
 			color: $white
+
+// projects
+.projects
+	margin-top: 30px
+	overflow: hidden
+	&__in
+		margin: -1% -1% 0 0
+		+clr
+
+// project
+.project
+	float: left
+	padding-bottom: 25%
+	margin: 1% 1% 0 0
+	width: 32%
+	background-color: $l_blue
+	background-size: cover
+	background-repeat: no-repeat
+	background-position: 0 0
