--- a/src/partials/head.html
+++ b/src/partials/head.html
@@ -8,4 +8,5 @@
 	<meta name="theme-color" content="#fff">
 	<link rel="stylesheet" media="all" href="css/style.css" >
 	<script src="js/app.js"></script>
+	<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?v=3"></script>
 </head>
