--- a/src/sass/_block.sass
+++ b/src/sass/_block.sass
@@ -8,13 +8,14 @@
 	height: 100%
 	vertical-align: top
 	display: table-cell
+	+clr
 
 // l
 .l
 	position: relative
 	@extend %in
-	height: 99%
-	min-height: 99% 
+	height: 100%
+	min-height: 100% 
 	z-index: 1
 	+vertical
 	&__in
@@ -54,6 +55,11 @@
 	letter-spacing: -1px 
 	text-transform: uppercase
 	+gb
+
+.title-average
+	font-size: 30px 
+	line-height: 1.2
+	+gr
 
 .title-small
 	font-size: 20px
