--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,7 +1,11 @@
 <!-- header -->
-<header class="header">
+<header class="header js-header">	
+	<!-- logo -->
 	<a href="#" class="logo"></a>
 	<div class="header__wrap">
+		<!-- btn-menu -->
+		<button class="btn-menu js-btn-menu" type="button"><span></span></button>
+		<!-- menu -->
 		<ul class="menu" id="menu">
 			<li class="is-active"><a href="#">WHO</a></li>
 			<li><a href="#">WHAT</a></li>
