--- a/src/sass/_header.sass
+++ b/src/sass/_header.sass
@@ -1,13 +1,22 @@
 .header
-	position: relative
+	position: fixed
+	height: 100%
 	padding-top: 31px
-	min-width: 106px
-	width: 10.4%
+	width: 106px
 	text-align: center
 	vertical-align: top
-	z-index: 1
+	z-index: 2
 	background: $blue 
 	display: table-cell
+	+r(768)
+		position: relative
+		height: auto
+		display: table-header-group
+	&.is-active
+		.menu
+			z-index: 3
+			visibility: visible
+			opacity: 1
 	&__wrap
 		padding-top: 68px
 		margin-top: -72px
@@ -15,21 +24,44 @@
 		+vertical
 	.menu
 		vertical-align: middle
-		font-size: 14px
 		display: inline-block
 
 // logo
 .logo
 	+s(logo)
 	display: inline-block 
+	+r(768)
+		display: none
 
 // menu
 .menu
 	+gl
 	text-align: left
+	font-size: 14px
+	+r(768)
+		position: fixed
+		top: 0
+		left: 0
+		right: 0
+		bottom: 0
+		padding: 132px 30px
+		font-size: 15px
+		text-align: center
+		overflow: auto
+		z-index: -1
+		visibility: hidden
+		opacity: 0
+		wil-chenge: opacity
+		transform: translate3d(0,0,0)
+		transition: opacity .2s, visibility .2s, z-index .2s
+		background: rgba($blue, .8) 
 	li
 		margin-top: 15px
 		display: block
+		+r(768)
+			margin-top: 20px
+			&:first-child
+				margin-top: 0
 		&.is-active
 			+gb
 		&:hover
@@ -39,3 +71,41 @@
 	a
 		color: $white 
 		transition: text-shadow .1s
+
+// btn-menu
+.btn-menu
+	position: absolute
+	top: 25px
+	left: 22px
+	width: 23px
+	height: 19px
+	z-index: 4
+	background: transparent
+	display: none
+	+r(768)
+		display: block
+	&.is-active
+		&:before
+			transform: translateY(7px) rotate(45deg)
+		&:after
+			transform: translateY(-9px) rotate(-45deg)
+		span
+			opacity: 0
+			transform: scale(0)
+	&:before,
+	&:after,
+	span
+		position: absolute
+		content: ""
+		left: 0
+		width: 23px
+		height: 3px
+		transition: transform .2s, opacity .2s
+		background: $white 
+	&:before
+		top: 0
+	&:after
+		bottom: 0
+	span
+		top: 50%
+		margin-top: -1.5px 
