--- a/src/sass/_common.sass
+++ b/src/sass/_common.sass
@@ -50,32 +50,22 @@
 	margin: 0 auto
 	padding: 0 30px 0 40px
 	max-width: 915px 
+	+r(768)
+		padding: 0 22px 0 22px
 %in
 	@extend .in
 
 
 body
-	color: $white 
-	min-width: 1020px
-	min-height: 700px
+	color: $white
 	+gr
 	font-size: 0
 	line-height: 1.2
 	background: url("../img/bg.png") no-repeat 50% 0
 	background-size: cover
-	&.is-who
+	background-attachment: fixed
+	&.is-hidden
 		overflow: hidden
-		.wrap
-			background: rgba($yellow, .8)
-			.l
-				text-align: left
-		.l-col1
-			width: 44%
-	&.is-what
-		.wrap
-			background-color: rgba($blue, .68)
-		.title-small
-			padding-left: 40px
 	
 // common blocks 
 	
@@ -83,12 +73,19 @@ body
 .greeting
 	padding: 60px 44px 0
 	font-size: 30px
+	+r(768)
+		margin-top: 167px
+		padding: 0
+		font-size: 15px
 	&__bold
 		+gb
 
 // logo-big
 .logo-big
 	padding-left: 80px
+	+r(768)
+		padding: 7px 0 0
+		text-align: right
 
 // team
 .team
@@ -161,15 +158,15 @@ body
 	position: absolute
 	top: 50%
 	left: 50%
-	transform: rotate(-49deg)
 	margin: -210px 0 0 -50%
+	transform: rotate(-49deg)
 	height: 420px
 	width: 100vw
 	overflow: hidden
 	z-index: 3
 	&__in
 		position: absolute
-		padding-left: 10.4%
+		padding-left: 106px
 		top: 50%
 		left: 50%
 		height: 100vh
@@ -193,9 +190,13 @@ body
 .projects
 	margin-top: 30px
 	overflow: hidden
+	+r(768)
+		margin-top: 7px
 	&__in
 		margin: -1% -1% 0 0
 		+clr
+		+r(768)
+			margin: 0
 
 // project
 .project
@@ -207,6 +208,14 @@ body
 	background-size: cover
 	background-repeat: no-repeat
 	background-position: 0 0
+	+r(768)
+		margin: 10px 0 0
+		padding-bottom: 40%
+		width: 100%
+		&:first-child
+			margin-top: 0
+	+r(480)
+		padding-bottom: 80%
 
 // contacts
 .contacts
@@ -221,15 +230,24 @@ body
 		min-height: 100%
 		vertical-align: top
 		display: table-cell
+		+r(768)
+			width: 100%
+			display: block
+	.map
+		+r(768)
+			height: 360px
 
 // contact
-.contact
-	+vertical
+.contact 
+	+vertical 
 	.title-average
 		margin-bottom: 18px
+		+r(768)
+			margin-bottom: 9px
+			padding-right: 80px
 	&__wrap
 		margin-top: 30px
-		width: 100%
+		width: 100% 
 		vertical-align: middle
 		display: inline-block
 	&__in
@@ -239,11 +257,43 @@ body
 		line-height: 1.3
 		font-size: 18px
 		max-width: 340px
+		+r(768)
+			padding-left: 68px
+			max-width: 100%
+			font-size: 12px
 
 // map
-.map
+.map 
+	+r(768)
+		margin-top: 33px
 	.gm-style
 		a,
 		a + span
 			display: none !important
+	.gm-style-cc
+		display: none !important
 			
+// scroll-icon
+.scroll-icon
+	position: absolute
+	bottom: 30px
+	left: 50%
+	margin-left: calc(-27px / 2) 
+	animation: mouse .5s infinite linear 
+	+s(mouse)
+	+r(768)
+		+sr(mouse)
+		margin-left: calc(-7px) 
+
+@keyframes mouse
+	0%
+		transform: translateY(0)
+	25%
+		transform: translateY(-2px)
+	50%
+		transform: translateY(0)
+	75% 
+		transform: translateY(2px)
+	100%
+		transform: translateY(0)
+
