--- a/src/sass/lib/_sprite.sass
+++ b/src/sass/lib/_sprite.sass
@@ -1,8 +1,9 @@
 $icons: (0:0)
-$icons: map-merge($icons,(codedby: (X: 0px, Y:-71px, W: 47px, H: 5px, TW: 84px, TH: 76px, IMG: '../img/icons.png')))
-$icons: map-merge($icons,(coderiver: (X: 0px, Y:-62px, W: 49px, H: 5px, TW: 84px, TH: 76px, IMG: '../img/icons.png')))
-$icons: map-merge($icons,(logo: (X: 0px, Y:0px, W: 53px, H: 58px, TW: 84px, TH: 76px, IMG: '../img/icons.png')))
-$icons: map-merge($icons,(mouse: (X: -57px, Y:0px, W: 27px, H: 41px, TW: 84px, TH: 76px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(codedby: (X: -81px, Y:-71px, W: 47px, H: 5px, TW: 165px, TH: 91px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(coderiver: (X: -81px, Y:-62px, W: 49px, H: 5px, TW: 165px, TH: 91px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(line-arr: (X: 0px, Y:0px, W: 77px, H: 91px, TW: 165px, TH: 91px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(logo: (X: -81px, Y:0px, W: 53px, H: 58px, TW: 165px, TH: 91px, IMG: '../img/icons.png')))
+$icons: map-merge($icons,(mouse: (X: -138px, Y:0px, W: 27px, H: 41px, TW: 165px, TH: 91px, IMG: '../img/icons.png')))
 
 
 // Gets an attribute from the sass map
@@ -43,23 +44,29 @@ $icons: map-merge($icons,(mouse: (X: -57px, Y:0px, W: 27px, H: 41px, TW: 84px, T
 //	width: 47px
 //	height: 5px
 //	background-image: url('../img/icons.png')
-//	background-position: 0px -71px
+//	background-position: -81px -71px
 //
 //.icon-coderiver
 //	width: 49px
 //	height: 5px
 //	background-image: url('../img/icons.png')
-//	background-position: 0px -62px
+//	background-position: -81px -62px
+//
+//.icon-line-arr
+//	width: 77px
+//	height: 91px
+//	background-image: url('../img/icons.png')
+//	background-position: 0px 0px
 //
 //.icon-logo
 //	width: 53px
 //	height: 58px
 //	background-image: url('../img/icons.png')
-//	background-position: 0px 0px
+//	background-position: -81px 0px
 //
 //.icon-mouse
 //	width: 27px
 //	height: 41px
 //	background-image: url('../img/icons.png')
-//	background-position: -57px 0px
+//	background-position: -138px 0px
 //
