--- a/src/sass/_header.sass
+++ b/src/sass/_header.sass
@@ -61,8 +61,6 @@
 			margin-top: 20px
 			&:first-child
 				margin-top: 0
-		&.is-active
-			+gb
 		&:hover
 			text-shadow: .5px 0 0 $white, -.5px 0 0 $white
 		&:first-child
@@ -70,6 +68,8 @@
 	a
 		color: $white 
 		transition: text-shadow .1s
+		&.active
+			+gb
 
 // btn-menu
 .btn-menu
