--- a/src/partials/head.html
+++ b/src/partials/head.html
@@ -9,4 +9,5 @@
 	<link rel="stylesheet" media="all" href="css/style.css" >
 	<script src="js/app.js"></script>
 	<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?v=3"></script>
+	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/skrollr/0.6.30/skrollr.min.js"></script>
 </head>
