--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,16 +1,17 @@
 <!-- header -->
 <header class="header js-header">	
 	<!-- logo -->
-	<a href="#" class="logo"></a>
+	<a href="#about" class="logo"></a>
 	<div class="header__wrap">
 		<!-- btn-menu -->
 		<button class="btn-menu js-btn-menu" type="button"><span></span></button>
 		<!-- menu -->
 		<ul class="menu" id="menu">
-			<li class="is-active"><a href="#">WHO</a></li>
-			<li><a href="#">WHAT</a></li>
-			<li><a href="#">WHERE</a></li>
-			<li><a href="#">WHY</a></li>
+			<li><a href="#about">ABOUT</a></li>
+			<li><a href="#who">WHO</a></li>
+			<li><a href="#what">WHAT</a></li>
+			<li><a href="#where">WHERE</a></li>
+			<!--<li><a href="#why">WHY</a></li>-->
 		</ul> 
 	</div>
 </header>
