--- a/src/sass/_block.sass
+++ b/src/sass/_block.sass
@@ -6,14 +6,23 @@
 		display: block
 
 // wrap
-.section
-	padding-left: 106px
-	height: 100%
-	vertical-align: top
+.container
 	display: table-cell
-	+clr
+	padding-left: 106px
 	+r(768)
 		padding-left: 0
+
+.section
+
+
+	min-width: 100%
+	height: 100vh
+
+	width: 100%
+	vertical-align: top
+
+	+clr
+	+r(768)
 		height: auto
 		display: block
 	&.is-home
