--- a/src/sass/_common.sass
+++ b/src/sass/_common.sass
@@ -51,7 +51,7 @@
 	padding: 0 30px 0 40px
 	max-width: 915px 
 	+r(768)
-		padding: 0 22px 0 22px
+		padding: 0 27px 0 22px
 %in
 	@extend .in
 
@@ -274,7 +274,7 @@ body
 	width: 100%
 	display: table
 	.contact,
-	.map
+	.contact-map
 		width: 50%
 		height: 100%
 		min-height: 100%
@@ -283,9 +283,13 @@ body
 		+r(768)
 			width: 100%
 			display: block
-	.map
+	.contact-map
 		+r(768)
 			height: 360px
+.map
+	height: 100%
+	width: 100%
+	min-height: 100%
 
 // contact
 .contact 
