Fixed about us text

--- a/src/partials/sections/about.html
+++ b/src/partials/sections/about.html
@@ -6,8 +6,8 @@
                 <!-- greeting -->
                 <div class="greeting">
                     <h3 class="title">Hello</h3>
-                    <p>we are nebo15 and we’re doing </p>
-                    <div class="greeting__bold">development &amp; UX</div>
+                    <p>we are Nebo15 and we’re </p>
+                    <div class="greeting__bold">fintech rockstars!</div>
                 </div>
             </div>
             <div class="l-col2">
