--- a/src/partials/sections/where.html
+++ b/src/partials/sections/where.html
@@ -5,8 +5,9 @@
 		<div class="contact">
 			<div class="contact__wrap">
 				<div class="contact__in">
-					<h3 class="title-average">We are located in Kiev, Ukraine</h3>
-					<p>33, Tarasa Shevchenko Boulevard 01032</p>
+					<h3 class="title-average">We are located in Kiev, Ukraine.</h3>
+					<p>33, Tarasa Shevchenko Boulevard, Kiev, Ukraine, 01032.</p>
+					<p>Also, for no reason, we turned our office into coworking space, <a href="https://www.facebook.com/nebo15">check it out</a>.</p>
 				</div>
 			</div>
 		</div>
