slider, new map, styles fix

--- a/src/partials/sections/who.html
+++ b/src/partials/sections/who.html
@@ -4,35 +4,104 @@
 
 	<!-- l -->
 	<div class="l">
-		<div class="l__in">
+		<div class="l__in " >
 			<div class="l-col1">
 				<!-- team -->
 				<div class="team">
 					<div class="nav-name">
 						<h3 class="title-middle">MEET <br>THE TEAM</h3>
 						<!-- nav -->
-						<ul class="nav">
-							<li><a href="#">Andrew</a></li>
-							<li><a href="#">Paul</a></li>
-							<li><a href="#">Alexey</a></li>
-							<li><a href="#">Oleh</a></li>
-							<li><a href="#">Anton</a></li>
-							<li class="is-active"><a href="#">Eugen</a></li>
-							<li><a href="#">Diana</a></li>
+						<ul class="nav" id="myTeam">
+							<li class="team-person active">Andrew</li>
+							<li class="team-person">Paul</li>
+							<li class="team-person">Alexey</li>
+							<li class="team-person">Oleh</li>
+							<li class="team-person">Anton</li>
+							<li class="team-person">Eugen</li>
+							<li class="team-person">Diana</li>
+							<li class="team-person">Dmytro</li>
 						</ul>
 					</div>
 				</div>
 			</div>
-			<div class="l-col2">
-				<!-- evidence -->
-				<div class="evidence">
-					<div class="name">Diana Yevitskaya</div>
-					<div class="profession">UX Designer</div>
+			<div class="l-col2 " id="sliderContainer" >
+				<div  class="team-person-item active">
+					<div class="evidence">
+						<div class="name">Andrew Dryga</div>
+						<div class="profession">CEO and CTO</div>
+					</div>
+					<div class="face">
+						<img src="/img/team/andrew.JPG" alt="img">
+					</div>
 				</div>
-				<div class="face">
-					<img src="img/who-img-1.png" alt="img">
+				<div class="team-person-item">
+					<div class="evidence">
+						<div class="name">Paul Vesnin</div>
+						<div class="profession">PHP Developer</div>
+					</div>
+					<div class="face">
+						<img src="/img/team/pasha.JPG" alt="img">
+					</div>
 				</div>
-			</div>
+				<div class="team-person-item">
+					<div class="evidence">
+						<div class="name">Alexey Bondarenko</div>
+						<div class="profession">Mobile Frontend Developer</div>
+					</div>
+					<div class="face">
+						<img src="/img/team/alexey.JPG" alt="img">
+					</div>
+				</div>
+				<div class="team-person-item">
+					<div class="evidence">
+						<div class="name">Oleh Samorai</div>
+						<div class="profession">PHP Engineer</div>
+					</div>
+					<div class="face">
+						<img src="/img/team/oleg.JPG" alt="img">
+					</div>
+				</div>
+				<div class="team-person-item">
+
+					<div class="evidence">
+						<div class="name">Anton Rogachevskiy</div>
+						<div class="profession">IOS Developer</div>
+					</div>
+					<div class="face">
+						<img src="/img/team/anton.JPG" alt="img">
+					</div>
+				</div>
+				<div class="team-person-item">
+
+					<div class="evidence">
+						<div class="name">Eugen Furman</div>
+						<div class="profession">QA</div>
+					</div>
+					<div class="face">
+						<img src="/img/team/zheka.JPG" alt="img">
+					</div>
+				</div>
+				<div class="team-person-item">
+
+					<div class="evidence">
+						<div class="name">Diana Yevitskaya</div>
+						<div class="profession">UX Designer</div>
+					</div>
+					<div class="face">
+						<img src="/img/team/diana.JPG" alt="img">
+					</div>
+				</div>
+				<div class="team-person-item">
+
+					<div class="evidence">
+						<div class="name">Dmytro Ivchenko</div>
+						<div class="profession">Frontend Developer</div>
+					</div>
+					<div class="face">
+						<img src="/img/team/dima.JPG" alt="img">
+					</div>
+				</div>
+
 		</div>
 	</div>
 </section>
