--- a/src/sass/_common.sass
+++ b/src/sass/_common.sass
@@ -62,13 +62,13 @@ body
 	font-size: 0
 	line-height: 1.2
 	background: url("../img/bg.png") no-repeat 50% 0
+	//+hdpi
+	//	background: url("../img/bg-2x.png") no-repeat 50% 0
 	background-size: cover
 	background-attachment: fixed
 	&.is-hidden
 		overflow: hidden
-	
-// common blocks 
-	
+
 // greeting
 .greeting
 	padding: 60px 44px 0
@@ -139,7 +139,7 @@ body
 .face
 	float: right
 	margin-top: 120px
-	width: 66%
+	width: 47%
 	+r(768)
 		margin-top: 30px
 	
