--- a/src/partials/sections/what.html
+++ b/src/partials/sections/what.html
@@ -6,12 +6,14 @@
 			<!-- projects -->
 			<div class="projects">
 				<div class="projects__in">
-					<a href="#" class="project" style="background-image: url(http://lorempixel.com/400/200/sports);"></a>
-					<a href="#" class="project"></a>
-					<a href="#" class="project"></a>
-					<a href="#" class="project"></a>
-					<a href="#" class="project"></a>
-					<a href="#" class="project"></a>
+					<a href="#" class="project" style="background-position: 0; background-image: url('/img/projects/gnd.png');"></a>
+					<a href="#" class="project" style="background-position: 0; background-image: url('/img/projects/1.png');"></a>
+					<a href="#" class="project" style="background-position: 0; background-image: url('/img/projects/mbank.png');"></a>
+
+					<a href="#" class="project" style="background-position: 0; background-image: url('/img/projects/payray.png');"></a>
+					<a href="#" class="project" style="background-position: 0; background-image: url('/img/projects/jetpay.png');"></a>
+					<a href="#" class="project" style="background-position: 0; background-image: url('/img/projects/parasport.png');"></a>
+
 				</div>
 			</div>
 		</div>
